name:                tracing-js
version:             0.1.0.0
synopsis:            Tracing JavaScript for fun and understanding

homepage:            http://papill0n.org/trace
license:             MIT
license-file:        LICENSE
author:              Lucas Stadler
maintainer:          lu@papill0n.org

category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable trace-server
  main-is:             TraceServer.hs

  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8, snap-core >=0.9 && <0.10, snap-server >=0.9 && <0.10, bytestring >=0.10 && <0.11, language-ecmascript >=0.16 && <0.17, parsec >=3.1 && <3.2, wl-pprint >=1.1 && <1.2, language-ecmascript, snap-core, snap-server, string-conversions
